--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OPFS Web Worker Test</title>
+    <title>OPFS Web Worker Test v2</title>
 </head>
 <body>
     <h1>OPFS Web Worker Test</h1>
@@ -16,7 +16,6 @@ const outputDiv = document.getElementById('output');
 
 document.addEventListener('DOMContentLoaded', async () => {
     useragent.textContent = navigator.userAgent +""
-    outputDiv.textContent = 'Starting OPFS test in Web Worker...';
     outputDiv.textContent = await testWorker()
 });
 
@@ -28,31 +27,21 @@ function testWorker(){
                     const opfsRoot = await navigator.storage.getDirectory();
                     const fileName = 'test_file.txt';
 
-                    // Create and write to a file
+                    // Create and write to a file using the async File System API
                     const fileHandle = await opfsRoot.getFileHandle(fileName, { create: true });
-                    const accessHandle = await fileHandle.createSyncAccessHandle();
-                    const encoder = new TextEncoder();
-                    const data = encoder.encode('Hello from OPFS in Web Worker!');
-                    await accessHandle.truncate(0)
-                    await accessHandle.write(data, { at: 0 });
-                    await accessHandle.flush();
-                    await accessHandle.close();
+                    const writable = await fileHandle.createWritable();
+                    await writable.write('Hello from OPFS in Web Worker!');
+                    await writable.close();
 
-                    // Read from the file
+                    // Read from the file using getFile()
                     const readFileHandle = await opfsRoot.getFileHandle(fileName);
-                    const readAccessHandle = await readFileHandle.createSyncAccessHandle();
-                    const fileSize = await readAccessHandle.getSize();
-                    const buffer = new ArrayBuffer(fileSize);
-                    await readAccessHandle.read(buffer, { at: 0 });
-                    await readAccessHandle.close();
+                    const file = await readFileHandle.getFile();
+                    const content = await file.text();
 
-                    const decoder = new TextDecoder();
-                    const content = decoder.decode(buffer);
-
-                    self.postMessage("OPFS test successful! Content: "+content);
+                    self.postMessage("Content: "+content);
 
                 } catch (error) {
-                    self.postMessage("OPFS test failed:"+error.message);
+                    self.postMessage("Error: "+error.message);
                 }
             }
         };
