--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>OPFS Web Worker Test</title>
 </head>
 <body>
-    <h1>OPFS Web Worker Test v2</h1>
+    <h1>OPFS Web Worker Test v3</h1>
     <div id="useragent"></div>
     <div id="output"></div>
 
@@ -27,21 +27,63 @@ function testWorker(){
                     const opfsRoot = await navigator.storage.getDirectory();
                     const fileName = 'test_file.txt';
 
-                    // Create and write to a file using the async File System API
-                    // Create and write to a file
+                    // Create a file handle we can reuse for both writing and reading
                     const fileHandle = await opfsRoot.getFileHandle(fileName, { create: true });
-                    const accessHandle = await fileHandle.createSyncAccessHandle();
+                    const data = 'Hello from OPFS in Web Worker!';
                     const encoder = new TextEncoder();
-                    const data = encoder.encode('Hello from OPFS in Web Worker!');
-                    await accessHandle.truncate(0)
-                    await accessHandle.write(data, { at: 0 });
-                    await accessHandle.flush();
-                    await accessHandle.close();
+                    const encoded = encoder.encode(data);
 
-                    // Read from the file using getFile()
-                    const readFileHandle = await opfsRoot.getFileHandle(fileName);
-                    const file = await readFileHandle.getFile();
-                    const content = await file.text();
+                    let wroteFile = false;
+                    let writeMethod = null;
+                    let lastWriteError = null;
+
+                    // Prefer the sync access handle path (Safari 16 supports this even without createWritable)
+                    if (typeof fileHandle.createSyncAccessHandle === 'function') {
+                        try {
+                            const accessHandle = await fileHandle.createSyncAccessHandle();
+                            try {
+                                accessHandle.truncate(0);
+                                accessHandle.write(encoded, { at: 0 });
+                                accessHandle.flush();
+                                wroteFile = true;
+                                writeMethod = 'sync';
+                            } finally {
+                                accessHandle.close();
+                            }
+                        } catch (err) {
+                            lastWriteError = err;
+                        }
+                    }
+
+                    // Fallback to FileSystemWritableFileStream when available
+                    if (!wroteFile && typeof fileHandle.createWritable === 'function') {
+                        const writable = await fileHandle.createWritable();
+                        await writable.write(data);
+                        await writable.close();
+                        wroteFile = true;
+                        writeMethod = 'writable';
+                    }
+
+                    if (!wroteFile) {
+                        throw lastWriteError || new Error('No supported OPFS write method available');
+                    }
+
+                    // Read from the file using getFile(). Safari 16.0 has a bug where
+                    // getFile() after a sync write sometimes reports size 0, so fall
+                    // back to another sync read if that happens.
+                    const file = await fileHandle.getFile();
+                    let content = await file.text();
+                    if (!content && writeMethod === 'sync' && file.size === 0 && typeof fileHandle.createSyncAccessHandle === 'function') {
+                        const accessHandle = await fileHandle.createSyncAccessHandle();
+                        try {
+                            const readBuffer = new ArrayBuffer(encoded.byteLength);
+                            accessHandle.read(readBuffer, { at: 0 });
+                            const decoder = new TextDecoder();
+                            content = decoder.decode(readBuffer);
+                        } finally {
+                            accessHandle.close();
+                        }
+                    }
 
                     self.postMessage("Content: "+content);
 
